# gotaglio-web

./: NOTES.md  TODO.md
backend/: TODO_BACKEND.md  pyproject.toml
backend/src/backend/: main.py  models.py  schemas.py  service.py  service2.py  test.http
documentation/: ChatGPT-Pydantic with SQLAlchemy.md  data-model.md
frontend/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: gotag.drawio
frontend/src/: App.css  App.tsx  CaseDetail.tsx  CaseEditor.tsx  KeywordsField.tsx  KeywordsField2.tsx  LLMField.tsx  RecordEditor.tsx  RecordEditor2.tsx  SuiteDetail.tsx  SuiteHome.tsx  SuiteLayout.tsx  SuitePage.tsx  TreeView.tsx  backend.ts  backends.ts  backends2.ts  dataModel.ts  index.css  main.tsx  sample-data.ts
frontend/src/components/: AnnotationEditor.tsx  App.css  App.tsx  CaseDetail.tsx  CaseEditor.tsx  DetailPane.tsx  Editor.tsx  Frame.tsx  Home.tsx  Instructions.tsx  Markdown.tsx  Middle.tsx  Navbar.tsx  ProjectEditor.tsx  RecordEditor.tsx  RouteDataLoader2.tsx  RouteDataProvider.tsx  Sidebar.tsx  SuiteDetail.tsx  SuiteEditor.tsx  SuiteLayout.tsx  TreeRoutes.tsx  TreeView.tsx  sampleData.ts
frontend/src/components/editors/: AnnotationEditor.tsx  CaseEditor.tsx  DebugPane.tsx  DetailPane.tsx  Editor.tsx  Editor2.tsx  EditorProvider.tsx  KeywordsField.tsx  LLMField.tsx  LLMField2.tsx  NOTE.md  ProjectEditor.tsx  RecordEditor.tsx  RunViewer.tsx  SessionEditor.tsx  SuiteEditor.tsx
frontend/src/mocks/: data.ts  service.ts  store.ts  test.ts
